fix: more readable fonts

--- a/styles.css
+++ b/styles.css
@@ -25,22 +25,25 @@ button {
   border-radius: 10px;
   border: 0;
   cursor: pointer;
+  font-size: 2rem;
 }
 #instructionsLink {
   position: absolute;
   top: 20px;
   right: 20px;
   cursor: pointer;
-  font-size: 1.5rem;
+  font-size: 2rem;
+  z-index: 3;
 }
 #instructions {
   padding: 20px;
   background: #555;
-  padding: 10px;
+  padding: 30px;
   position: absolute;
   top: 0;
   left: 0;
-  font-size: 1.5rem;
+  font-size: 3rem;
+  z-index: 2;
 }
 #game {
   padding-top: 20%;
@@ -74,10 +77,14 @@ input[type="text"] {
 input[type="text"]::selection {
   background: none;
 }
+#msg {
+  font-size: 5rem;
+}
 #results {
   display: block;
   background: #333;
   padding: 20px;
+  font-size: 3rem;
 }
 #results p {
   margin: 0 0 10px;
@@ -89,6 +96,7 @@ input[type="text"]::selection {
 #copyright {
   font-size: 1rem;
   color: #888;
+  margin-top: 20px;
 }
 .hg-rows > .hg-row:first-child,
 .hg-rows > .hg-row:last-child {
